--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <title>Osther Weather</title>
@@ -12,8 +12,8 @@
 <body>
   <section class="min-vh-100 pb-5" style="background-color: #C1CFEA;">
     <div class="container">
-      <div class="px-4 py-5 text-center">
-        <!-- <img class="d-block mx-auto mb-4" src="osthir_weather_Logo.png" alt="" width="200" height="200"> -->
+      <div class="px-4 py-sm-3 py-1 text-center">
+        <img class="d-block mx-auto mb-sm-4" src="osthir_weather_Logo.png" alt="" width="120">
         <h1 class="display-5 fw-bold text-center">
           <span class="d-inline-block">Welcome to</span>
           <span class="text-bg-warning text-white px-3 pb-1 my-2 rounded-5 d-inline-block">Osthir Weather</span>
@@ -21,7 +21,7 @@
         </h1>
       </div>
       <div class="row d-flex justify-content-center align-items-center h-100" style="color: #282828;">
-        <div class="col-md-9 col-lg-7 px-4">
+        <div class="col-md-9 col-lg-7 px-2">
           <form id="form">
             <div class="input-group input-group-lg mb-3">
               <input id="city" required type="text" class="form-control" placeholder="Enter city or zip"
